# eggs

./: .gitignore  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex/: hooks.json
.codex/hooks/: common.py  eggs-codex-notify.js  permission_request.py  post_tool_use.py  stop.py  user_prompt_submit.py
.github/workflows/: release.yml
claude-plugin/: INSTALL.md  README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: eggs-claude-notify.js  hooks.json
claude-plugin/skills/eggs/: SKILL.md  eggs  eggs.cmd
codex-plugins/.codex-plugin/: plugin.json
codex-plugins/hooks/: eggs-codex-notify.js  hooks.json
desktop/: .gitignore  README.md  dev  dev.ps1
desktop/pets/dino/: pet.json
desktop/src/: bubble.css  bubble.html  bubble.js  index.html  input.css  input.html  input.js  peer.html  peer.js  pet.js  style.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bubbles.rs  cli.rs  cli_install.rs  client.rs  ipc.rs  main.rs  peers.rs  pet.rs  pet_menu.rs  pid.rs  remote.rs  remote_assets.rs  state.rs  upload.rs
eggs/: SKILL.md  eggs  eggs.cmd
eggs/agents/: openai.yaml
eggs/assets/: dino.json
eggs/scripts/: EggDesktop.swift  egg_desktop.py  test_egg_desktop.py
eggs/tools/: README.md  build_tools.sh  check_sprite.swift  extract_sprite.swift  merge_spritesheets.swift  resize_crop_frames.swift
scripts/: build_custom_pet_atlas.py  release.ps1  release.sh
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.go  main_test.go
server/benchmarks/: bench-1000peers.json  random-1000peers-with-metrics.json
server/scripts/: room_broadcast_smoke.py  seed_benchmark_sprites.py
tools/: bounds_sprite.swift  bounds_sprite_bin  check_sprite_bin  extract_sprite.swift  extract_sprite_bin
