[package]
name = "eggs"
version = "0.1.0"
edition = "2021"
description = "Codex-compatible animated desktop pet"
default-run = "eggs"

# Single binary that doubles as GUI and CLI. The first invocation launches the
# transparent overlay; subsequent invocations are detected by the single-instance
# plugin and dispatched as CLI sub-commands (state, pet, install, ...).
[[bin]]
name = "eggs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Remote multiplayer (Go server at server/main.go)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "multipart", "json"] }
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
