[package]
name = "eggs"
version = "0.4.3"
edition = "2021"
description = "Codex-compatible animated desktop pet"
default-run = "eggs"

# Single binary that doubles as GUI and CLI. The first invocation launches the
# transparent overlay; subsequent invocations are detected by the single-instance
# plugin and dispatched as CLI sub-commands (state, pet, install, ...).
[[bin]]
name = "eggs"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Remote multiplayer (Go server at server/main.go)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "multipart", "json"] }
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# Fast iteration profile: same runtime behavior as `release` but no LTO and
# more codegen units, so it builds in seconds instead of minutes. Slightly
# larger binary, no perceptible runtime cost for this app.
#   cargo build --profile release-fast
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
strip = false
